--- a/Documents/CMU MHCI/PUI/Assignment 6/app/zion-app/src/App.css
+++ b/Documents/CMU MHCI/PUI/Assignment 6/app/zion-app/src/App.css
@@ -51,6 +51,8 @@ nav ul button {
   text-decoration: none;
   color: #4f4f4f;
   border: none;
+  font-size: 16px;
+  font-weight: 600;
 
 }
 nav ul button:hover {
@@ -65,7 +67,24 @@ nav ul button:hover {
   justify-content: space-around;
   color: #591B01;
   font-weight: bold;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 40px 0;
 
+}
+button.close {
+  position: absolute;
+  right: 16px;
+  text-decoration: none;
+  color: #591B01;
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 16px;
+  top: 12px;
+  cursor: pointer;
 }
 .landmark {
   height: 200px;
@@ -88,6 +107,15 @@ ul.hikeInfo li img {
 ul.hikeInfo li p {
   width: 102px;
   margin: 0;
+}
+.landmark img {
+  position: absolute;
+  left: 0;
+  max-height: 320px;
+  bottom: 0;
+}
+.Card h1 {
+  margin-top: 0;
 }
 @keyframes App-logo-spin {
   from {
