--- a/Documents/CMU MHCI/PUI/Assignment 6/app/zion-app/src/App.css
+++ b/Documents/CMU MHCI/PUI/Assignment 6/app/zion-app/src/App.css
@@ -33,6 +33,10 @@
   margin-bottom: 0;
   text-transform: uppercase;
 }
+.details {
+  padding: 40px 0;
+  width: 50%;
+}
 .container {
   height: 800px;
   display: flex;
@@ -69,8 +73,11 @@ nav ul button:hover {
   font-weight: bold;
   position: absolute;
   bottom: 0;
-  width: 100%;
-  padding: 40px 0;
+  width: 80%;
+  align-self: center;
+  height: 440px;
+  flex-grow: 1;
+  z-index: 10;
 
 }
 button.close {
@@ -85,9 +92,6 @@ button.close {
   font-size: 16px;
   top: 12px;
   cursor: pointer;
-}
-.landmark {
-  height: 200px;
 }
 ul.hikeInfo {
   display: flex;
@@ -109,13 +113,30 @@ ul.hikeInfo li p {
   margin: 0;
 }
 .landmark img {
-  position: absolute;
-  left: 0;
-  max-height: 320px;
+  max-height: 100%;
   bottom: 0;
+  max-width: 100%;
+}
+.mother {
+  display: flex;
+  flex-direction: column;
+}
+.landmark {
+  background-color: #ffffff;
+  height: 440px;
+  width: 50%;
 }
 .Card h1 {
   margin-top: 0;
+}
+.darkBackground {
+  z-index: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
 }
 @keyframes App-logo-spin {
   from {
