--- a/Documents/CMU MHCI/PUI/Assignment 6/app/zion-app/src/App.css
+++ b/Documents/CMU MHCI/PUI/Assignment 6/app/zion-app/src/App.css
@@ -72,13 +72,22 @@ nav ul button:hover {
   color: #591B01;
   font-weight: bold;
   position: absolute;
-  bottom: 0;
+  bottom: -440px;
   width: 80%;
   align-self: center;
   height: 440px;
   flex-grow: 1;
   z-index: 10;
 
+  -webkit-transition: transform 0.18s;
+  -o-transition: transform 0.18s;
+  transition: transform 0.18s;
+}
+
+.Card.show {
+  -webkit-transform: translateY(-440px);
+  -ms-transform: translateY(-440px);
+  transform: translateY(-440px);
 }
 button.close {
   position: absolute;
